[package]
name = "wolly"
version = "0.1.0"
edition = "2024"
authors = ["threadexio"]
description = """
A transparent TCP proxy with Wake-On-Lan capabilities.
"""
readme = "README.md"
homepage = "https://github.com/threadexio/wolly"
repository = "https://github.com/threadexio/wolly"

[dependencies]
clap = { version = "4.5.40", features = ["derive"] }
eyre = { version = "0.6" }
miniarg = { version = "0.5.0", default-features = false }
owo-colors = { version = "4" }
thiserror = { version = "2" }
tokio = { version = "1", features = ["net", "io-util", "rt-multi-thread", "macros", "time", "fs", "signal"] }
tracing = { version = "0.1" }
tracing-subscriber = { version = "=0.3.19" }
